--- a/RPCtest.html
+++ b/RPCtest.html
@@ -3,94 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPC</title>
+    <title>Document</title>
   </head>
   <body>
-    <p>PICK ROCK PAPER SCISSORS</p>
-    <button
-      onclick="
-    playGame('Rock')
-    "
-    >
-      ROCK
-    </button>
-    <button
-      onclick="
-    playGame('Paper')
-    "
-    >
-      PAPER
-    </button>
-    <button
-      onclick="
-    playGame('Scissors')
-    "
-    >
-      SCISSORS
-    </button>
-    <button onclick="resetScore()">
-      RESET SCORE
-    </button>
-
-    <br /><br />
-
     <script>
-      const score = {
-        userWins: 0,
-        compWins: 0,
-        Ties: 0,
+      //---------------------------------------------------------------
+      // // Creating Object Literal n JSON operations
+      // const prod2 = {
+      //   name: "shirt",
+      //   ["delivery-date"]: "2024-07-01",
+      //   rating: {
+      //     stars: 4.5,
+      //     count: 353,
+      //   },
+
+      //   fun: function fun1() {
+      //     console.log("This is a function inside an object");
+      //   },
+      // };
+      // console.log(prod2);
+      // console.log(prod2.name);
+      // console.log(prod2["name"]);
+      // console.log(prod2["delivery-date"]);
+
+      // console.log(prod2.rating.stars);
+      // prod2.fun();
+
+      // // Convert to JSON string
+      // console.log(JSON.stringify(prod2)+ " <- This is JSON string");
+      // // Convert back to JS object
+      // const JsonRecString = JSON.stringify(prod2);
+      // console.log(JSON.parse(JsonRecString))
+
+      //-------------------------------------------------------------
+
+      console.log("hello".length);
+      console.log("hello world".toUpperCase()); // auto boxing
+
+      const obj = {
+        name: "Alice",
       };
+      const obj2 = obj;
+      obj2.name = "Bob";
+      console.log(obj);
+      console.log(obj2);
 
-      function playGame(role) {
-        const compMoveSysin = rngMove();
-
-        let state = "";
-
-        if (role === compMoveSysin) {
-          state = "Tie";
-          score.Ties += 1;
-        } else if (
-          (role === "Rock" && compMoveSysin === "Scissors") ||
-          (role === "Paper" && compMoveSysin === "Rock") ||
-          (role === "Scissors" && compMoveSysin === "Paper")
-        ) {
-          state = "Win";
-          score.userWins += 1;
-        } else {
-          state = "Lose";
-          score.compWins += 1;
-        }
-
-        console.log(compMoveSysin);
-        console.log(state);
-
-        alert(
-          `you picked ${role} and god picked ${compMoveSysin}, you ${state}
-Wins : ${score.userWins} , Losses : ${score.compWins}, Ties : ${score.Ties}`);
+      const obj3 = {
+        name : 'Alice'
       }
 
-      function rngMove() {
-        const RNGpc = Math.random();
+      console.log(obj === obj3);
+      console.log(obj.name === obj3.name);
+      console.log (obj === obj2);
 
-        let compMove = "";
-        if (RNGpc >= 0 && RNGpc < 1 / 3) {
-          compMove = "Rock";
-        } else if (RNGpc >= 1 / 3 && RNGpc < 2 / 3) {
-          compMove = "Paper";
-        } else if (RNGpc >= 2 / 3 && RNGpc < 3 / 3) {
-          compMove = "Scissors";
-        }
-
-        return compMove;
+      const obj4 = {
+        name: "ALIEN",
+        age : 30
       }
+      // const name = obj4.name;
+      const {name,age} = obj4;   /// destructuring assignment/shortcut
+      console.log(name);
+      console.log(age);
 
-      function resetScore() {
-        score.userWins = 0;
-        score.compWins = 0;
-        score.Ties = 0;
-        alert("Score has been reset!");
+      const obj5 = {
+        // name : name        // ES6 shorthand property names
+        name,                // same as above line
+
+        // method : function fc() {
+        //   console.log("This is a method inside obj5");
+        // }
+
+        method() {         // ES6 shorthand method definition
+          console.log("This is a method inside obj5");
       }
-      
+    }
+      console.log(obj5);
+      obj5.method();
     </script>
   </body>
 </html>
